--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -1,12 +1,13 @@
-.background{
-    width: 200px;
-    height: 100px;
-    border: 1px solid black;
+.background {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-}
+  }
+
+  .who {
+    margin-top: 10px;
+  }
+  
 
 button{
     background-color: greenyellow;
@@ -18,4 +19,17 @@ button{
 
 span{
     font-size: 70px;
+}
+
+h1{
+    font-size: 35px;
+}
+
+
+.type{
+    background-color: aqua;
+    width: 200px;
+    height: 70px;
+    margin: 10px;
+    font-size: 40px;
 }
